# radiate-to-ros2-python-conversion-pipeline

./: LICENSE
radiate-v2/: README.md  package.xml  setup.cfg  setup.py
radiate-v2/launch/: radiate_player.launch.py
radiate-v2/radiate_ros2/: dataset_loader.py  msg_utils.py  radiate_player_node.py
