<?xml version="1.0"?>
<package format="3">
  <name>radiate_ros2</name>
  <version>0.1.0</version>
  <description>
    ROS 2 Humble player for the RADIATE adverse-weather dataset.
    Replays LiDAR, stereo camera, radar (cartesian + polar), IMU, and GPS
    from a RADIATE sequence directory through standard ROS 2 topics.
  </description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
